# OregonCore

./: .gitattributes  .gitignore  .hgignore  .hgtags  .travis.yml  AUTHORS  AUTHORS.md  CMakeLists.txt  ChangeLog  Doxyfile.in.cmake  INSTALL.linux  NEWS  README  README.AHBOT  README.md  THANKS  appveyor.yml  config.h.cmake  index.html  issue_template.md  params.json  pull_request_template.md  readme.md  revision.h.in.cmake  shadowmoon_valley.cpp
dep/jemalloc/: CMakeLists.txt  COPYING  OC_NOTE.txt  README  TC_NOTE.txt  VERSION  config.guess  config.sub  configure  configure.ac
dep/jemalloc/src/: arena.c  base.c  chunk.c  chunk_dss.c  chunk_mmap.c  chunk_swap.c  ckh.c  ctl.c  extent.c  hash.c  huge.c  jemalloc.c  mb.c  mutex.c  prof.c  rtree.c  stats.c  tcache.c  valgrind.c
dep/pdcurses/: CMakeLists.txt  config.h
dep/pdcurses/win32/: pdckbd.c
dep/src/g3dlite/: CMakeLists.txt
dep/zlib/: CMakeLists.txt  crc32.c  deflate.c  gzlib.c  gzread.c  gzwrite.c  inftrees.c  zconf.h  zlib.h  zutil.c  zutil.h
src/: CMakeLists.txt
src/bindings/: CMakeLists.txt
src/bindings/interface/: CMakeLists.txt  ScriptMgr.cpp  ScriptMgr.h  config.h  system.cpp
src/bindings/scripts/: CMakeLists.txt  ScriptMgr.cpp  ScriptMgr.h  oregonscripts.rc
src/collision/: BIH.cpp  BIH.h  BoundingIntervalHierarchy.cpp  BoundingIntervalHierarchy.h  BoundingIntervalHierarchyWrapper.h  CMakeLists.txt  DynamicTree.cpp  DynamicTree.h  GameObjectModel.cpp  GameObjectModel.h  IVMapManager.h  MapTree.cpp  MapTree.h  ModelInstance.cpp  ModelInstance.h  RegularGrid.h  TileAssembler.cpp  TileAssembler.h  VMapDefinitions.h  VMapFactory.cpp  VMapFactory.h  VMapManager2.cpp  VMapManager2.h  VMapTools.h  WorldModel.cpp  WorldModel.h  collisionPCH.h
src/framework/: CMakeLists.txt
src/framework/Dynamic/: FactoryHolder.h  ObjectRegistry.h
src/framework/GameSystem/: Grid.h  GridLoader.h  GridRefManager.h  GridReference.h  NGrid.h  TypeContainer.h  TypeContainerFunctions.h  TypeContainerFunctionsPtr.h  TypeContainerVisitor.h
src/framework/Network/: SocketDefines.h
src/framework/Platform/: CompilerDefs.h  Define.h
src/framework/Policies/: CreationPolicy.h  ObjectLifeTime.cpp  ObjectLifeTime.h  Singleton.h  SingletonImp.h  ThreadingModel.h
src/framework/Utilities/: ByteConverter.h  Callback.h  EventProcessor.cpp  EventProcessor.h  LinkedList.h  TypeList.h  UnorderedMap.h
src/game/: AccountMgr.cpp  AccountMgr.h  AddonHandler.cpp  AddonHandler.h  AnimalRandomMovementGenerator.h  ArenaTeam.cpp  ArenaTeam.h  ArenaTeamHandler.cpp  AuctionHouseBot.cpp  AuctionHouseBot.h  AuctionHouseHandler.cpp  AuctionHouseMgr.cpp  AuctionHouseMgr.h  Bag.cpp  Bag.h  BattleGround.cpp  BattleGround.h  BattleGroundAA.cpp  BattleGroundAA.h  BattleGroundAB.cpp  BattleGroundAB.h  BattleGroundAV.cpp  BattleGroundAV.h  BattleGroundBE.cpp  BattleGroundBE.h  BattleGroundEY.cpp  BattleGroundEY.h  BattleGroundHandler.cpp  BattleGroundMgr.cpp  BattleGroundMgr.h  BattleGroundNA.cpp  BattleGroundNA.h  BattleGroundRL.cpp  BattleGroundRL.h  BattleGroundWS.cpp  BattleGroundWS.h  Battleground.cpp  Battleground.h  BattlegroundAA.cpp  BattlegroundAA.h  (+344 more)
src/game/PrecompiledHeaders/: gamePCH.cpp  gamePCH.h
src/genrev/: CMakeLists.txt
src/oregoncore/: CMakeLists.txt  CliRunnable.cpp  CliRunnable.h  Console.cpp  Main.cpp  Master.cpp  Master.h  OCSoap.cpp  OCSoap.h  OregonCore.rc  RARunnable.cpp  RARunnable.h  RASocket.cpp  RASocket.h  WorldRunnable.cpp  WorldRunnable.h  oregoncore.conf.dist  resource.h
src/oregoncore/RegressionTests/: Misc.cpp  RegressionTest.cpp  RegressionTest.h
src/oregonrealm/: AuthCodes.h  AuthSocket.cpp  AuthSocket.h  BufferedSocket.cpp  BufferedSocket.h  CMakeLists.txt  Console.cpp  Main.cpp  OregonRealm.aps  OregonRealm.rc  PatchHandler.cpp  PatchHandler.h  RealmList.cpp  RealmList.h  oregonrealm.conf.dist  resource.h
src/scripts/: CMakeLists.txt
src/scripts/Custom/: custom_example.cpp  custom_gossip_codebox.cpp  on_events.cpp  test.cpp
src/scripts/EasternKingdoms/: Myzrael.cpp  alterac_mountains.cpp  arathi_highlands.cpp  blasted_lands.cpp  boss_kruul.cpp  burning_steppes.cpp  dun_morogh.cpp  duskwood.cpp  eastern_plaguelands.cpp  elwynn_forest.cpp  eversong_woods.cpp  ghostlands.cpp  hillsbrad_foothills.cpp  hinterlands.cpp  ironforge.cpp  isle_of_queldanas.cpp  loch_modan.cpp  redridge_mountains.cpp  searing_gorge.cpp  silvermoon_city.cpp  silverpine_forest.cpp  stormwind_city.cpp  stranglethorn_vale.cpp  swamp_of_sorrows.cpp  tirisfal_glades.cpp  undercity.cpp  western_plaguelands.cpp  westfall.cpp  wetlands.cpp
src/scripts/Kalimdor/: ashenvale.cpp  azshara.cpp  azuremyst_isle.cpp  bloodmyst_isle.cpp  boss_azuregos.cpp  darkshore.cpp  desolace.cpp  durotar.cpp  dustwallow_marsh.cpp  felwood.cpp  feralas.cpp  moonglade.cpp  mulgore.cpp  orgrimmar.cpp  silithus.cpp  stonetalon_mountains.cpp  tanaris.cpp  teldrassil.cpp  the_barrens.cpp  thousand_needles.cpp  thunder_bluff.cpp  ungoro_crater.cpp  winterspring.cpp
src/scripts/Outland/: blades_edge_mountains.cpp  boss_doomlord_kazzak.cpp  boss_doomwalker.cpp  hellfire_peninsula.cpp  nagrand.cpp  netherstorm.cpp  shadowmoon_valley.cpp  shattrath_city.cpp  terokkar_forest.cpp  zangarmarsh.cpp
src/scripts/PrecompiledHeaders/: ScriptPCH.cpp  ScriptPCH.h
src/scripts/World/: areatrigger_scripts.cpp  boss_emeriss.cpp  boss_lethon.cpp  boss_taerar.cpp  boss_ysondre.cpp  go_scripts.cpp  guards.cpp  item_scripts.cpp  mob_generic_creature.cpp  npc_innkeeper.cpp  npc_professions.cpp  npc_taxi.cpp  npcs_special.cpp
src/shared/: Base.cpp  Base.h  ByteBuffer.h  CMakeLists.txt  Common.cpp  Common.h  Console.h  DelayExecutor.cpp  DelayExecutor.h  Errors.h  LockedQueue.h  Log.cpp  Log.h  Mthread.cpp  Mthread.h  ProgressBar.cpp  ProgressBar.h  ServiceWin32.cpp  ServiceWin32.h  SystemConfig.h  Threading.cpp  Threading.h  Timer.h  Util.cpp  Util.h  WorldPacket.h  revision.h
src/shared/Auth/: AuthCrypt.cpp  AuthCrypt.h  BigNumber.cpp  BigNumber.h  CMakeLists.txt  Hmac.cpp  Hmac.h  SARC4.cpp  SARC4.h  Sha1.cpp  Sha1.h  WardenKeyGeneration.h  md5.h
src/tools/: CMakeLists.txt
(+3768 files in other folders)
